<resources>
    <string name="app_name">Restaurant Inspector</string>
    <!--Restaurant List-->
    <string name="restaurants">Restaurants</string>
    <string name="no_inspection_found">No inspections</string>
    <string name="restaurant_icon">restaurant icon</string>
    <string name="restaurant_name">restaurant name</string>
    <string name="issues_found">issues found</string>
    <string name="latest_inspection">latest inspection</string>
    <string name="hazard_low">Low</string>
    <string name="hazard_moderate">Medium</string>
    <string name="hazard_high">High</string>

    <string name="operator_violation">Operator violation</string>
    <string name="food_violation">Food violation</string>
    <string name="equipment_violation">Equipment violation</string>
    <string name="pest_violation">Pest violation</string>
    <string name="employee_violation">Employee violation</string>
    <string name="establishment_violation">Establishment violation</string>
    <string name="chemical_violation">Chemical violation</string>

    <!--Restaurant Details-->
    <string name="critical_issue"># of Critical Issues: %d</string>
    <string name="non_critical_issue"># of Non-Critical Issues: %d</string>
    <string name="inspection_date">Inspection Date</string>
    <string name="rest_name">Restaurant name here</string>
    <string name="restaurant_add">Facility Address:\n %s %s</string>
    <string name="rest_gps">GPS:\n %f, %f</string>
    <string name="inspections_list">List of Inspections:</string>
    <string name="empty_inspections">No inspections available.</string>

    <!--Inspection-->
    <string name="type">Type</string>
    <string name="brief">Brief description</string>
    <string name="hazard_level">Hazard: </string>
    <string name="issue">issue</string>
    <string name="empty_violations">No violations recorded.</string>
    <string name="violation">Violation</string>
    <string name="title_activity_maps">Restaurant Inspector</string>
    <string name="date">%s %d, %d</string>

    <!--Map-->
    <string name="updating">Updating…</string>
    <string name="updated">These have new inspections!</string>
    <string name="cancelled">CANCELLED DOWNLOAD</string>
    <string name="newdata">New Update</string>

    <!--search dialog-->
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="search_restaurant_name">Search restaurant name</string>
    <string name="hazard_filter">Hazard filter:</string>
    <string name="of_critical_violations"># of critical violations:</string>
    <string name="filter_by_favourites">Filter by favourites</string>
    <string name="new_update_found_do_you_want_to_update">New update found, do you want to update?</string>
    <string name="Critical">Critical</string>
    <string name="routine_check">Routine check</string>
    <string name="follow_up_check">Follow-up check</string>
    <string name="num_issues">%d issue(s)</string>
    <string name="off">OFF</string>
    <string name="low">LOW</string>
    <string name="moderate">MODERATE</string>
    <string name="high">HIGH</string>
    <string name="more_than">MORE THAN</string>
    <string name="less_than">LESS THAN</string>
    <string name="critical">Critical</string>
    <string name="non_critical">Non-Critical</string>
    <string name="daysago">%d day(s) ago</string>

</resources>

